--- a/style.css
+++ b/style.css
@@ -32,20 +32,29 @@
 .section-middle {
     height: 60vh;
     background-color: blueviolet;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container-middle-upper {
     height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container-img {
     height: 100%;
-    width: 30vw;
+    width: 50vw;
 }
 
 .container-text {
     height: 100%;
-    width: 20vw;
+    width: 25vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 p {
@@ -84,14 +93,18 @@ footer {
 
 .ul-nav-bottom {
     display: flex;
-    flex-direction: column;
-    width: 100%;
+    flex-direction: row;
+    list-style-type: none;
+}
+
+.li-menu-bottom {
+    width: 10vw;
 }
 
 .li-menu-bottom:hover {
     color: green;
     cursor: pointer;
-}  
+}
 
 .li-menu-top:hover {
     color: blue;
